:zap: Optimize graphic engine with use of virtual threads